1_1_18 working code. commit before trying server sent updates

--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,4 @@
-/* styles */
-/* called by your view template */
 
-/* You might want to try something fancier: */
-/* less: http://lesscss.org/ */
 
 * {
   box-sizing: border-box;
@@ -11,13 +7,15 @@
 body {
   font-family: helvetica, arial, sans-serif;
   margin: 5% 10%;
-  background: url(https://images.freeimages.com/images/large-previews/dd7/disco-balls-1478176.jpg) center center fixed;
+  background: url(https://res.cloudinary.com/db8ctqbcb/image/upload/v1514384250/disco-balls-1478176_i26hgg.jpg) center center fixed;
 }
 
 h1 {
   font-weight: bold;
   color: navy;
 }
+
+
 
 .bold {
   font-weight: bold;
@@ -34,10 +32,43 @@ h1 {
   border-radius: 5px;
 }
 
+.login {
+  width: 100%;
+  max-width: 650px;
+}
+
+
+.login a {  
+  padding: .1em 1.5em .3em 1.5em;
+  border-radius: 5px;
+  color: rgba(244, 205, 195, 1);
+  background: linear-gradient(to bottom left, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.5));
+  text-decoration: none;
+}
+
+.loginlink {
+  width: 30%}
+
+.login a:hover {
+  background-color:rgba(0, 0, 0, 0.8);
+  color: #f4df66;
+}
+
 li {
   background-color: black;
   color: white;
   list-style-type: none;
+  padding: 1% 5%;
+  width: 95%;
+  height: auto;
+  margin-bottom: 5px;
+  border: 2px solid #cd8b73;
+  border-radius: 5px;
+}
+
+.ListItem {
+  background-color: black;
+  color: white;  
   padding: 1% 5%;
   width: 95%;
   margin-bottom: 5px;
@@ -56,8 +87,7 @@ form {
   background-color: black;
   color: white;
   display: inline-block;  
-  width: 100%;
-  border-radius: 5px 5px 0px 0px;  
+  width: 100%;    
 }
 
 input {
@@ -71,6 +101,7 @@ input {
 }
 
 button {
+  
   font-size: 16px;
   border-radius: 3px;
   background-color: lightgrey;
@@ -80,15 +111,19 @@ button {
 }
 
 button:hover {
-  background-color: yellow;
+  background-color: #f4df66;
 }
 
 button:active {
-  box-shadow: none;
+  box-shadow: none;  
 }
 
-li {
-  
+.ButtonSelected {
+  background-color: #f4df66;
+}
+
+.Disabled {
+  display: none;
 }
 
 footer {
@@ -104,3 +139,13 @@ footer > a {
 .nicejob {
   text-decoration: line-through;
 }
+
+.right {
+  float: right;
+}
+
+span .headcountcontainer {  
+  padding: 10px;
+  margin-right: 40px;  
+}
+
