--- a/public/style.css
+++ b/public/style.css
@@ -9,11 +9,18 @@ body {
   background: url(https://res.cloudinary.com/db8ctqbcb/image/upload/v1514384250/disco-balls-1478176_i26hgg.jpg) center center fixed;
 }
 
+a {
+  padding: .1em 1.5em .3em 1.5em;
+  border-radius: 5px;
+  color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px darkblue, 0 0 5px navy;
+}
 
+a:hover {
+  color: #f4df66;
+}
 
-
-h1 {
-  
+h1 {  
   font-weight: bold;
   color: navy;
 }
@@ -33,22 +40,20 @@ h1 {
 
 .venues {  
   max-width: 650px;
-  box-shadow: 20px 2px 150px 150px rgba(206, 139, 115, 0.8);
+  box-shadow: 20px 2px 150px 150px rgba(225, 172, 155, .8);
   border: 1px solid black;
   border-radius: 5px;
 }
 
 .login {
   width: 100%;
-  max-width: 650px;
+  max-width: 650px;  
 }
 
 
 .login a {  
-  padding: .1em 1.5em .3em 1.5em;
-  border-radius: 5px;
-  color: rgba(244, 205, 195, 1);
-  background: linear-gradient(to bottom left, rgba(0,0,0,0.0), rgba(0, 0, 0, 0.5));
+  padding: .15em 1.5em .3em 1.5em;
+  border-radius: 5px; 
   text-decoration: none;
 }
 
@@ -56,21 +61,9 @@ h1 {
   width: 30%}
 
 .login a:hover {
-  background-color:rgba(0, 0, 0, 0.8);
-  color: #f4df66;
+  background-color:rgba(0, 0, 0, 1);  
 }
 
-li {
-  background-color: black;
-  color: white;
-  list-style-type: none;
-  padding: 1% 5%;
-  width: 98%;
-  height: auto;  
-  margin-bottom: 5px;
-  border: 2px solid #cd8b73;
-  border-radius: 5px;
-}
 
 .ListItem {
   background-color: black;
@@ -98,11 +91,15 @@ form {
   background-color: black;
   color: white;
   display: inline-block;  
-  width: 100%;    
+  width: 100%; 
+  border-top: 2px solid #cd8b73;
+  border-bottom: 2px solid #cd8b73;
 }
 
 input {
   display: inline-block;
+  margin-left: 1em;
+  margin-right: .5em;
   margin-bottom: 10px;
   padding: 5px;
   width: 200px;
@@ -116,28 +113,33 @@ button {
   border-radius: 3px;
   background-color: lightgrey;
   border: 1px solid grey;
-  box-shadow: .125em .125em teal;
+  box-shadow: .125em .125em grey;
   cursor: pointer;
 }
 
 button:hover {
   background-color: #f4df66;
+  
 }
 
 button:active {
-  box-shadow: none;  
+  box-shadow: none;
+  
 }
 
-.ButtonSelected {
+.selected {
   background-color: #f4df66;
+  
 }
 
-.NotSelected {
+.not-selected {
   background-color: lightgrey;
+  
 }
 
-.Disabled {
+.disabled {
   display: none;
+  
 }
 
 footer {
@@ -146,13 +148,7 @@ footer {
   border-top: 1px solid lightgrey;
 }
 
-footer > a {
-  color: #BBBBBB;
-}
 
-.nicejob {
-  text-decoration: line-through;
-}
 
 .right {
   float: right;
@@ -172,4 +168,9 @@ span .headcountcontainer {
   body{
     margin: 5% 10%;
   }
+}
+
+.is-not-clickable {
+  color: grey;
+  pointer-events:none;
 }
